ffmpeg: set VCFR when copying timestamps

This fixes unreasonable initial frame repeats
Fixes Ticket3176

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 738ebb4a0e0c8fbdc83b44cf30b8c9b7ac866270)